# wave-domain-iterative-coupling

./: .gitignore  ADDING_A_PH_EXAMPLE.md  CMakeLists.txt  README.md
examples/generic_ph_mass_spring/: main.cpp
examples/two_oscillators_duffing_linear/: TUTORIAL.md  benchmark_config.cpp  benchmark_config.hpp  benchmark_diagnostics.cpp  benchmark_diagnostics.hpp  benchmark_io.cpp  benchmark_io.hpp  benchmark_runner.cpp  benchmark_runner.hpp  main.cpp  plot_results.py  two_oscillator_model.cpp  two_oscillator_model.hpp
examples/two_oscillators_duffing_linear/out_cpp/: diagnostics_K0.csv  diagnostics_K20.csv  diagnostics_K3.csv  diagnostics_K35.csv  diagnostics_K50.csv  diagnostics_K8.csv  metadata.json  reference_bigK.csv  summary.json  trajectory_K0.csv  trajectory_K20.csv  trajectory_K3.csv  trajectory_K35.csv  trajectory_K50.csv  trajectory_K8.csv
examples/two_oscillators_duffing_linear/out_figs/: convergence_vs_Kn.eps  convergence_vs_Kn_outlined.eps  position_error.eps  position_error_outlined.eps  summary_FNE_vs_Kn.eps  summary_FNE_vs_Kn_outlined.eps  summary_passivity_vs_Kn.eps  summary_passivity_vs_Kn_outlined.eps  traj_q.eps  traj_q_outlined.eps
include/iterative_coupling/core/: parallel_executor.hpp  scattering.hpp  types.hpp
include/iterative_coupling/coupling/: linear_dirac_interconnection.hpp  prepared_wave_interconnection.hpp
include/iterative_coupling/integrators/: discrete_gradient.hpp  discrete_gradient_phi.hpp  phi_map.hpp
include/iterative_coupling/integrators/detail/: discrete_gradient_phi_detail.hpp
include/iterative_coupling/ph/: port_hamiltonian_model.hpp
include/iterative_coupling/solver/: drs_interface_solver.hpp  frozen_port_map.hpp  partitioned_simulator.hpp
paper/: 01_introduction.tex  02_problem_formulation.tex  03_iterative_coupling.tex  04_passivity_and_convergence.tex  05_experiment.tex  06_discussion.tex  submission.tex
tests/: benchmark_tests.cpp  core_tests.cpp  ph_tests.cpp
